# mcp-auth-demo

./: .env.example  .gitignore  README.md  agent.py  auth.py  auth_handler.py  demo_e2e.py  generate_supabase_token.py  graph.py  graph_nodes.py  langgraph.json  main_demo.py  mcp_integration.py  pyproject.toml  quick_start.py  requirements.txt  secret_management.py  setup_database.py  setup_secrets.py  test.ipynb  test_scenarios.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
tests/: README.md  test_all_stages.py  test_stage1_vault_retrieval.py  test_stage2_mcp_connection.py  test_stage3_auth_middleware.py  test_stage4_agent_flow.py
