[project]
name = "mcp-auth-demo"
version = "0.1.0"
description = "Demo of user-scoped MCP authentication with Supabase Vault and LangGraph"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "httpx>=0.28.1",
    "langchain-core>=0.3.68",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "langgraph-cli[inmem]>=0.3.3",
    "langgraph-sdk>=0.1.72",
    "langsmith>=0.4.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "supabase>=2.16.0",
    "typing-extensions>=4.14.1",
]
